--- a/vote-app/charts/frontend/app-elastic/static/default.css
+++ b/vote-app/charts/frontend/app-elastic/static/default.css
@@ -92,34 +92,34 @@ div#version {
   width: 250px;
 }
 
-.button1 {
+.choicea {
   background-color: white;
   color: black;
   border: 2px solid #008cba;
 }
 
-.button1:hover {
+.choicea:hover {
   background-color: #008cba;
   color: white;
 }
-.button2 {
+.choiceb {
   background-color: white;
   color: black;
   border: 2px solid #555555;
 }
 
-.button2:hover {
+.choiceb:hover {
   background-color: #555555;
   color: white;
 }
 
-.button3 {
+.reset {
   background-color: white;
   color: black;
   border: 2px solid #f44336;
 }
 
-.button3:hover {
+.reset:hover {
   background-color: #f44336;
   color: white;
 }
