--- a/vote-app/charts/frontend/app-elastic/templates/error.html
+++ b/vote-app/charts/frontend/app-elastic/templates/error.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='default.css') }}" />
-    <title>{{ title }}</title>
+    <link rel="icon" href="data:,">
+    {% load static %}
+    <link rel="stylesheet" type="text/css" href="{% static "default.css" %}" />
+    <title>Error</title>
   </head>
   <body>
     <div id="container">
